feat(ProductService): add methods, getAll, getById, create, delete